# lingmo-virtual-pc

./: .gitlab-ci.yml  HACKING.md  NEWS  README.md  build.lpm  copyright  lingmo-virtualpc.doap  meson.build  meson_options.txt
.gitlab/issue_templates/: Bug.md  Default.md  Feature.md
build-aux/flatpak/: cdrkit-build-fix.patch  genisoimage-extern.patch  libvirt-use-monitor-in-xdg-runtime-dir.patch  org.lingmo.VirtualPCDevel.json  pci.ids  usb.ids
data/: gtk-style.css  lingmo-virtualpc-search-provider.ini  lingmo-virtualpc.gresource.xml  meson.build  org.lingmo.VirtualPC.SearchProvider.service.in  org.lingmo.VirtualPC.appdata.xml.in  org.lingmo.VirtualPC.desktop.in  org.lingmo.VirtualPC.service.in  org.lingmo.virtualpc.gschema.xml  recommended-downloads.xml
data/osinfo/: almalinux-8.xml  archlinux-rolling.xml  centos-7.0.xml  centos-stream-9.xml  debian-4.xml  eos-3.3.xml  fedora-1.xml  freedos-1.2.xml  guix-1.3.xml  lingmo-3.38.xml  lingmo.xml  manjaro-19.0.xml  meson.build  nixos-20.03.xml  opensuse-10.2.xml  popos-17.10.xml  rhel-8.0.xml  rocky-8.4.xml  silverblue-28.xml  trisquel-9.xml  ubuntu-4.10.xml
data/ui/: app-window.ui  app-window_ui.py  collection-toolbar.ui  collection-toolbar_ui.py  display-page.ui  display-page_ui.py  display-toolbar.ui  display-toolbar_ui.py  downloads-hub-row.ui  downloads-hub-row_ui.py  downloads-hub.ui  downloads-hub_ui.py  icon-view-child.ui  icon-view-child_ui.py  icon-view.ui  icon-view_ui.py  kbd-shortcuts-window.ui  kbd-shortcuts-window_ui.py  list-view-row.ui  list-view-row_ui.py  list-view.ui  list-view_ui.py  menus.ui  menus_ui.py  properties-window.ui  properties-window_ui.py  searchbar.ui  searchbar_ui.py  shared-folder-popover.ui  shared-folder-popover_ui.py  thumbnail.ui  thumbnail_ui.py  toast.ui  toast_ui.py  topbar.ui  topbar_ui.py  transfer-info-row.ui  transfer-info-row_ui.py  transfer-popover.ui  transfer-popover_ui.py  (+10 more)
data/ui/assistant/: assistant.ui  assistant_ui.py  express-install-row.ui  express-install-row_ui.py  firmware-row.ui  firmware-row_ui.py  media-entry.ui  media-entry_ui.py  os-chooser-row.ui  os-chooser-row_ui.py  os-downloader.ui  os-downloader_ui.py  rhel-download-dialog.ui  rhel-download-dialog_ui.py
data/ui/preferences/: cdrom-row.ui  cdrom-row_ui.py  device-list-row.ui  device-list-row_ui.py  devices-page.ui  devices-page_ui.py  memory-row.ui  memory-row_ui.py  preferences-window.ui  preferences-window_ui.py  resources-page.ui  resources-page_ui.py  shared-folder-popover_ui.py  shared-folder-row.ui  shared-folder-row_ui.py  shared-folders-widget.ui  shared-folders-widget_ui.py  snapshot-list-row.ui  snapshot-list-row_ui.py  snapshots-page.ui  snapshots-page_ui.py
debian/: changelog  control  copyright  gsettings-override  recommended-downloads.xml  rules  ubuntu-logo-cleanup.sh  user-session-migration
debian/source/: lintian-overrides
debian/upstream/: metadata
help/: meson.build
help/C/: 3d-acceleration.page  backup.page  command-line.page.stub  continuous.page.stub  create.page  delete.page  disk-images.page  edit-domain.page  how-many-machines.page.stub  import-images.page.stub  index.page  install-guest-agent.page  interface.page  list-of-supported-protocols.page.stub  networking.page.stub  prop-system.page  prop-trouble.page  properties.page.stub  search.page  shared-folders.page  shutdown.page  snapshot-create.page  snapshot-delete.page  snapshot-rename.page  snapshot-revert.page  supported-protocols.page  system-requirements.page  usb-redirection.page  virtualization.page  what-is-a-virtual-machine.page  why-do-i-need-virtual-machine.page
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
po/: POTFILES.in  ab.po  af.po  ar.po  as.po  be.po  bg.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  ie.po  it.po  ja.po  ka.po  kab.po  kk.po  km.po  kn.po  (+33 more)
src/: actions-popover.vala  app-window.vala  app.vala  archive-reader.vala  archive-writer.vala  async-launcher.vala  box-config.vala  collection-source.vala  collection-toolbar.vala  collection.vala  display-page.vala  display-toolbar.vala  display.vala  downloader.vala  downloads-hub.vala  icon-view-child.vala  icon-view.vala  installed-media.vala  installer-media.vala  iso-extractor.vala  keys-input-popover.vala  libvirt-broker.vala  libvirt-cloned-media.vala  libvirt-machine.vala  libvirt-media.vala  libvirt-vm-cloner.vala  libvirt-vm-importer.vala  lingmo-virtualpc-search-provider.vala  list-view-row.vala  list-view.vala  machine.vala  main.vala  media-manager.vala  meson.build  os-database.vala  searchbar.vala  shared-folders.vala  spice-display.vala  topbar.vala  tracker-iso-query.vala  (+13 more)
tests/: README  common_steps.py  environment.py  express-install.feature  general.feature  import-vms.feature  livecd.feature  multi-windows.feature  snapshots.feature  spice.feature  system-broker.feature
(+37 files in other folders)
